--- a/style.css
+++ b/style.css
@@ -12,12 +12,13 @@ body {
   font-family: Ubuntu;
   font-size: 1.3vw;
   background-color: rgb(255, 255, 255);
-  -webkit-box-shadow: 0px 0px 10px 4px rgba(255,255,255,0.7); 
-  box-shadow: 0px 0px 6px 2px rgba(176, 206, 223, 0.7);
+  -webkit-box-shadow: 0px 0px 5px 5px rgba(176, 206, 223, 0.7); 
+  box-shadow: 0px 0px 5px 5px rgba(176, 206, 223, 0.7);
   color: #000;
   margin: 1.5% auto;
   width: 80%;
   padding: 0;
+  border-radius: 0.8vw;
 }
 h2 {
   font-size: 1.2vw;
@@ -25,13 +26,13 @@ h2 {
 header {
   display: flex;
   background-color: inherit;
-  overflow: hidden;
   position: sticky;
   position: -webkit-sticky;
   justify-content: space-between;
-  top: 0;
+  top: -0.7vw;
   padding: 0 3.5vw;
   z-index: 1;
+  border-radius: 0.8vw 0.8vw 0 0;
 }
 .left {
   margin-top: 3%;
@@ -125,11 +126,10 @@ nav a:hover::before {
   text-align: center ;
   border-radius: 50%;
   margin-left: 0.2vw;
-  
+  transition: 0.7s;
 }
 .social i:hover{
-  background-color: rgb(200,213,220);
-  transition: 1s;
+  background-color: rgb(201, 206, 209);
 }
 
 
@@ -141,7 +141,7 @@ main {
   background: url(images/bg.svg) no-repeat;
   background-position-y: 6vw;
   background-position-x: 52vw;
-  background-size: 57%;
+  background-size: 58%;
 }
 
 .home {
@@ -150,7 +150,7 @@ main {
   position: relative;
   align-items: center;
   width: 93%;
-  margin: 10vw auto 8vw;
+  margin: 10vw auto 12vw;
 }
 .home div:first-of-type{
   display: flex;
@@ -231,7 +231,7 @@ main {
   margin: auto;
   width: 70%;
   border: 0.5vw #f1f1f1 solid;
-  border-radius: 40%;
+  border-radius: 30%;
   box-sizing: border-box;
   align-items: center;
   transition: 1s;
@@ -246,12 +246,13 @@ main {
 
 
 .contact input[type=text],input[type=email], textarea {
+  font-size: 0.7vw;
   width: 100%;
   padding: 0.8vw;
   border: 0.12vw solid #ccc;
   border-radius: 0.4vw;
   box-sizing: border-box;
-  margin: 6px auto 16px;
+  margin: 0.5vw auto 1vw;
   resize:none;
 
 }
@@ -262,6 +263,7 @@ main {
 }
 
 input[type=submit] {
+  font-size: 0.7vw;
   background-color: rgb(130, 95, 175);
   color: white;
   padding: 0.5vw 1vw;
@@ -272,6 +274,28 @@ input[type=submit] {
 }
 
 footer {
+  font-size: 0.8vw;
   background-color: rgb(54, 57, 80);
-  height: 3vw;
+  border-radius: 0 0 0.8vw 0.8vw;
+  
+  text-transform: uppercase;
+  
+}
+footer, footer i {
+  color: #fff;
+}
+footer i{
+  padding: 0.35vw;
+  border-radius: 50%;
+  transition: 0.7s;
+}
+footer i:hover{
+  background-color: rgb(82, 88, 139)
+}
+footer div{
+  width: 95%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
