--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ main {
   margin-bottom: 0;
 }
 .about div:nth-of-type(2) i{
-  background-color: rgb(130, 95, 175);
+  background-color: rgb(108, 80, 145);
   border-radius: 50%;
   padding: 0.4vw;
   margin-right: 0.5vw;
@@ -243,7 +243,11 @@ main {
   width: 50%;
   margin: auto auto 1vw;
 }
-
+.contact i {
+  border-radius: 50%;
+  padding: 0.4vw;
+  margin-right: 0.5vw;
+}
 
 .contact input[type=text],input[type=email], textarea {
   font-size: 0.7vw;
