--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ html {
   scroll-padding-top: 10%;
 }
 body {
+  display: flex;
+  flex-direction: column;
   font-family: Ubuntu;
   font-size: 1.3vw;
-  background-color: rgb(255, 255, 255);
   -webkit-box-shadow: 0px 0px 5px 5px rgba(176, 206, 223, 0.7); 
   box-shadow: 0px 0px 5px 5px rgba(176, 206, 223, 0.7);
   color: #000;
@@ -19,6 +20,7 @@ body {
   width: 80%;
   padding: 0;
   border-radius: 0.8vw;
+  background-color: rgb(255, 255, 255);
 }
 h2 {
   font-size: 1.2vw;
@@ -33,6 +35,7 @@ header {
   padding: 0 3.5vw;
   z-index: 1;
   border-radius: 0.8vw 0.8vw 0 0;
+  
 }
 .left {
   margin-top: 3%;
@@ -137,20 +140,18 @@ main {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  row-gap: 3vw;
-  background: url(images/bg.svg) no-repeat;
-  background-position-y: 6vw;
-  background-position-x: 52vw;
-  background-size: 58%;
+  row-gap: 2vw;
 }
 
 .home {
   display: flex;
   flex-direction: row;
-  position: relative;
   align-items: center;
-  width: 93%;
-  margin: 10vw auto 12vw;
+  padding: 0 3vw 0;
+  height: 39vw;
+  background: url(images/bg.svg) no-repeat;
+  background-position: 52vw 6vw;
+  background-size: 58%;
 }
 .home div:first-of-type{
   display: flex;
@@ -179,21 +180,21 @@ main {
   color: rgb(61, 64, 87);
 }
 
+
 .about {
   display: flex;
   background-color: rgb(54, 57, 80);
   color: #fff;
-  overflow: hidden;
   justify-content: space-between;
   padding: 1vw 3.5vw;
-  align-items: center
+  align-items: center;
 }
 .about div:first-of-type{
   flex: 1 20%;
 }
 .about div:first-of-type img{
   position: relative;
-  width: 80%;
+  width: 85%;
   border: 0.8vw solid #fff;
   border-bottom: 2.2vw solid #fff;
   box-sizing: border-box;
@@ -202,7 +203,7 @@ main {
 .about div:nth-of-type(2){
   flex: 1 80%;
 }
-.about div:nth-of-type(2) h3{
+.about div:nth-of-type(2) h2{
   margin-bottom: 0;
 }
 .about div:nth-of-type(2) i{
@@ -210,6 +211,10 @@ main {
   border-radius: 50%;
   padding: 0.4vw;
   margin-right: 0.5vw;
+}
+.about span {
+  font-size: 1.2vw;
+  float: right;
 }
 
 
@@ -281,15 +286,15 @@ footer {
   font-size: 0.8vw;
   background-color: rgb(54, 57, 80);
   border-radius: 0 0 0.8vw 0.8vw;
-  
   text-transform: uppercase;
-  
 }
 footer, footer i {
   color: #fff;
 }
 footer i{
   padding: 0.35vw;
+  border-radius: 50%;
+  transition: 1s;
 }
 footer i:hover{
   background-color: rgb(82, 88, 139)
