--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 @import url("https://use.fontawesome.com/releases/v5.15.4/css/all.css");
-@font-face {
-  font-family: Ubuntu;
-  src: url(Ubuntu.ttf);
-}
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 html {
   background: rgb(200,213,220);
   scroll-behavior: smooth;
@@ -97,6 +96,7 @@ nav ul{
   display: flex;
   flex-direction: row;
   font-size: 0.95vw;
+  font-weight: 400;
   list-style-type: none;
 }
 nav a {
@@ -144,6 +144,7 @@ main {
 }
 
 .home {
+  font-weight: 400;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -165,6 +166,7 @@ main {
   width: 16vw;
 }
 .home p{
+  
   font-size: 1.5vw;
   color: rgb(100, 100, 100);
   margin: 0;
@@ -189,6 +191,10 @@ main {
   padding: 1vw 3.5vw;
   align-items: center;
 }
+.about a{
+  color:rgb(250, 182, 34);
+  text-decoration: none;
+}
 .about div:first-of-type{
   flex: 1 20%;
 }
@@ -201,9 +207,11 @@ main {
   transform: rotate(-9deg);
 }
 .about div:nth-of-type(2){
+  font-family: Roboto, sans-serif;
   flex: 1 80%;
 }
 .about div:nth-of-type(2) h2{
+  font-family: Ubuntu;
   margin-bottom: 0;
 }
 .about div:nth-of-type(2) i{
@@ -214,6 +222,7 @@ main {
 }
 .about span {
   font-size: 1.2vw;
+  font-style: italic;
   float: right;
 }
 
@@ -230,6 +239,10 @@ main {
   font-size: 1vw;
   width: 30%;
   padding: 1vw;
+  font-family: Roboto, sans-serif;
+}
+.news article h2 {
+  font-family: Ubuntu;
 }
 .news i{
   font-size: 1.3vw;
@@ -252,6 +265,10 @@ main {
 .contact {
   width: 50%;
   margin: auto auto 1vw;
+  font-family: Roboto;
+}
+.contact h2 {
+  font-family: Ubuntu;
 }
 .contact i {
   border-radius: 50%;
