--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url("https://use.fontawesome.com/releases/v5.15.4/css/all.css");
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&family=Ubuntu:wght@300;400&display=swap');
 
 html {
   background: rgb(200,213,220);
@@ -8,21 +7,23 @@ html {
   scroll-padding-top: 10%;
 }
 body {
+  font-family: Roboto, sans-serif;
+  font-size: 1.3vw;
   display: flex;
   flex-direction: column;
-  font-family: Ubuntu;
-  font-size: 1.3vw;
+  background-color: rgb(255, 255, 255);
   -webkit-box-shadow: 0px 0px 5px 5px rgba(176, 206, 223, 0.7); 
   box-shadow: 0px 0px 5px 5px rgba(176, 206, 223, 0.7);
-  color: #000;
   margin: 1.5% auto;
   width: 80%;
-  padding: 0;
   border-radius: 0.8vw;
-  background-color: rgb(255, 255, 255);
+}
+h1, h2, h3, h4 {
+  font-family: Ubuntu;
 }
 h2 {
   font-size: 1.2vw;
+  margin-bottom: 1vw;
 }
 header {
   display: flex;
@@ -34,75 +35,63 @@ header {
   padding: 0 3.5vw;
   z-index: 1;
   border-radius: 0.8vw 0.8vw 0 0;
-  
 }
-.left {
-  margin-top: 3%;
+.left, .right {
+  display: flex;
+  align-items: center;
+  margin-top: 2.5%;
+  margin-bottom: 0.8%;
 }
-.left svg:first-of-type{
-    display: inline-block;
-    width: 3vw;
-    vertical-align: middle;
+.left svg:first-of-type {
+  width: 3vw;
 }
 .stroke {
   fill-opacity: 0%;
-  fill:#000;
   stroke: #000;
   stroke-width: 10px;
-  stroke-dashoffset: 0;
   stroke-dasharray: 4000;
   animation: stroke 30s ease infinite;
-  animation-fill-mode: forwards;
 }
-@keyframes stroke {
+  @keyframes stroke {
   0% {
-    stroke-dashoffset: 4000;
-    fill-opacity: 0%;
-    stroke-opacity: 100%;
+      stroke-dashoffset: 4000;
+      fill-opacity: 0%;
+      stroke-opacity: 100%;
   }
   25% {
-    fill-opacity: 1%;
+      fill-opacity: 1%;
   }
   33% {
-    stroke-dashoffset: 0;
-    fill-opacity: 100%;
-    stroke-opacity: 100%;
+      stroke-dashoffset: 0;
+      fill-opacity: 100%;
+      stroke-opacity: 100%;
   }
   90%{
-    stroke-dashoffset: 0;
-    fill-opacity: 100%;
-    stroke-opacity: 0%;
+      stroke-dashoffset: 0;
+      fill-opacity: 100%;
+      stroke-opacity: 0%;
   }
   100%{
-    stroke-dashoffset: 0;
-    fill-opacity: 0%;
-    stroke-opacity: 0%;
+      stroke-dashoffset: 0;
+      fill-opacity: 0%;
+      stroke-opacity: 0%;
   }
 }
 .left svg:nth-of-type(2) {
-  display: inline-block;
   width: 10vw;
   margin-left: 1vw;
   margin-bottom: 0.5vw;
-  vertical-align: middle;
 }
-.right {
-  display: flex;
-  align-items: baseline;
-  margin-top: 3%;
-  float:right;
-}
-nav ul{
+nav ul {
   display: flex;
   flex-direction: row;
   font-size: 0.95vw;
-  font-weight: 400;
   list-style-type: none;
 }
 nav a {
   color: #000;
   margin-right: 0.5vw;
-  padding-bottom: 0.5vw;
+  padding-bottom: 0.3vw;
   position: relative;
   text-decoration: none;
 }
@@ -131,11 +120,11 @@ nav a:hover::before {
   margin-left: 0.2vw;
   transition: 0.7s;
 }
-.social i:hover{
+.social i:hover {
   background-color: rgb(201, 206, 209);
 }
 
-
+/* Sections */
 main {
   display: flex;
   flex-direction: column;
@@ -143,82 +132,77 @@ main {
   row-gap: 2vw;
 }
 
+/* Home section */
 .home {
-  font-weight: 400;
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0 3vw 0;
+  justify-content: space-between;
+  padding: 0 2.5vw 0;
   height: 39vw;
-  background: url(images/bg.svg) no-repeat;
-  background-position: 52vw 6vw;
-  background-size: 58%;
+  background: url(images/bg.svg) no-repeat 52vw 6vw/58%;
 }
-.home div:first-of-type{
+.home div:first-of-type * {
   display: flex;
-  flex: 2;
   flex-direction: column;
+  margin: 0;
 }
-.home div:nth-of-type(2) img{
+.home img {
   position: relative;
   right: 1vw;
   border-radius: 40%;
   width: 16vw;
 }
-.home p{
-  
-  font-size: 1.5vw;
-  color: rgb(100, 100, 100);
-  margin: 0;
-  font-size: 1.8vw;
-}
-.home p:first-of-type{
+.home h1 {
   font-size: 9vw;
   color:#f1f1f1;
   line-height: 5vw;
 }
-.home p:nth-of-type(3){
+.home h1 + h3 {
+  font-size: 1.5vw;
+  color: rgb(100, 100, 100);
+  font-size: 1.8vw;
+  font-weight: normal;
+}
+.home h2 {
   font-size: 3vw;
   color: rgb(61, 64, 87);
+  font-weight: normal;
 }
 
-
+/* About section */
 .about {
   display: flex;
   background-color: rgb(54, 57, 80);
   color: #fff;
   justify-content: space-between;
-  padding: 1vw 3.5vw;
+  padding: 2.5vw;
   align-items: center;
-}
-.about a{
-  color:rgb(250, 182, 34);
-  text-decoration: none;
 }
 .about div:first-of-type{
   flex: 1 20%;
 }
-.about div:first-of-type img{
-  position: relative;
+.about img {
   width: 85%;
   border: 0.8vw solid #fff;
   border-bottom: 2.2vw solid #fff;
   box-sizing: border-box;
   transform: rotate(-9deg);
 }
-.about div:nth-of-type(2){
+.about div:nth-of-type(2) {
   font-family: Roboto, sans-serif;
   flex: 1 80%;
+  font-weight: 300;
 }
-.about div:nth-of-type(2) h2{
-  font-family: Ubuntu;
-  margin-bottom: 0;
-}
-.about div:nth-of-type(2) i{
+.about i {
   background-color: rgb(108, 80, 145);
   border-radius: 50%;
   padding: 0.4vw;
   margin-right: 0.5vw;
+}
+.about a {
+  color:rgb(250, 182, 34);
+  text-decoration: none;
 }
 .about span {
   font-size: 1.2vw;
@@ -226,23 +210,19 @@ main {
   float: right;
 }
 
-
+/* News section */
 .news {
-  width: 93%;
-  margin: auto;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: flex-start;
+  width: 93%;
+  margin: auto;
 }
-.news article{
+.news article {
   font-size: 1vw;
   width: 30%;
   padding: 1vw;
-  font-family: Roboto, sans-serif;
-}
-.news article h2 {
-  font-family: Ubuntu;
 }
 .news i{
   font-size: 1.3vw;
@@ -250,7 +230,7 @@ main {
 .news article img{
   display: block;
   margin: auto;
-  width: 70%;
+  width: 80%;
   border: 0.5vw #f1f1f1 solid;
   border-radius: 30%;
   box-sizing: border-box;
@@ -261,23 +241,19 @@ main {
   border: 0.5vw #999999 solid;
 }
 
-
+/* Contact section */
 .contact {
   width: 50%;
   margin: auto auto 1vw;
-  font-family: Roboto;
-}
-.contact h2 {
-  font-family: Ubuntu;
+  font-size: 1vw;
 }
 .contact i {
   border-radius: 50%;
   padding: 0.4vw;
   margin-right: 0.5vw;
 }
-
 .contact input[type=text],input[type=email], textarea {
-  font-size: 0.7vw;
+  font-size: 0.8vw;
   width: 100%;
   padding: 0.8vw;
   border: 0.12vw solid #ccc;
@@ -287,14 +263,12 @@ main {
   resize:none;
 
 }
-
 .contact input[type=text]:focus, input[type=email]:focus, textarea:focus{
   border: 0.12vw solid rgb(130, 95, 175);
   outline: none;
 }
-
 input[type=submit] {
-  font-size: 0.7vw;
+  font-size: 0.8vw;
   background-color: rgb(130, 95, 175);
   color: white;
   padding: 0.5vw 1vw;
@@ -304,27 +278,24 @@ input[type=submit] {
   float: right;
 }
 
+/* Footer section */
 footer {
-  font-size: 0.8vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 0.7vw;
   background-color: rgb(54, 57, 80);
   border-radius: 0 0 0.8vw 0.8vw;
   text-transform: uppercase;
-}
-footer, footer i {
   color: #fff;
+  padding: 0 2vw;
 }
 footer i{
   padding: 0.35vw;
   border-radius: 50%;
   transition: 1s;
+  color: #fff;
 }
 footer i:hover{
   background-color: rgb(82, 88, 139)
-}
-footer div{
-  width: 95%;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
