--- a/style.css
+++ b/style.css
@@ -21,9 +21,8 @@ body {
 h1, h2, h3, h4 {
   font-family: Ubuntu;
 }
-h2 {
-  font-size: 1.2vw;
-  margin-bottom: 1vw;
+h3 {
+  font-size: 1.1vw;
 }
 header {
   display: flex;
@@ -142,10 +141,9 @@ main {
   height: 39vw;
   background: url(images/bg.svg) no-repeat 52vw 6vw/58%;
 }
-.home div:first-of-type * {
+.home div:first-of-type {
   display: flex;
   flex-direction: column;
-  margin: 0;
 }
 .home img {
   position: relative;
@@ -153,21 +151,27 @@ main {
   border-radius: 40%;
   width: 16vw;
 }
+.home h1, h2, h3 {
+  width: fit-content;
+  margin: 0;
+}
 .home h1 {
-  font-size: 9vw;
+  font-size: 12vw;
   color:#f1f1f1;
-  line-height: 5vw;
+  line-height: 6vw;
 }
 .home h1 + h3 {
   font-size: 1.5vw;
   color: rgb(100, 100, 100);
   font-size: 1.8vw;
   font-weight: normal;
+  margin-left: 0.7vw;
 }
 .home h2 {
   font-size: 3vw;
   color: rgb(61, 64, 87);
   font-weight: normal;
+  margin-left: 0.7vw;
 }
 
 /* About section */
@@ -222,9 +226,9 @@ main {
 .news div {
   display: flex;
   justify-content: space-around;
-  align-items: center
+  align-items: flex-start;
 }
-.news div:first-of-type i{
+.news h3 i{
     background-color: rgb(201, 206, 209);
     border-radius: 50%;
     padding: 0.4vw;
@@ -257,6 +261,9 @@ main {
   width: 50%;
   margin: auto auto 1vw;
   font-size: 1vw;
+}
+.contact h3{
+  margin-bottom: 1vw;
 }
 .contact i {
   border-radius: 50%;
