--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ main {
   align-items: center;
   justify-content: space-between;
   padding: 0 2.5vw 0;
-  height: 82vh;
+  height: 38vw;
   background: url(images/bg.svg) no-repeat 52vw 6vw/58%;
 }
 .home img {
@@ -242,7 +242,7 @@ main {
 .experience article h4 {
   text-transform: uppercase;
   padding-left: 0.5vw;
-  border-bottom: 0.4vh solid #dfdfdf;
+  border-bottom: 0.2vw solid #dfdfdf;
   cursor : pointer;
 }
 .experience article div {
@@ -255,7 +255,7 @@ main {
 .dropdown h4 span{
   font-size: 0.9vw;
   float: right;
-  margin: 1vh 0.5vw 0 0;
+  margin: 1vw 0.5vw 0 0;
   
 }
 .dropdown div span {
@@ -305,11 +305,11 @@ h4 i{
   margin-left: 4vw;
   font-size: 0.8vw;
   gap: 5vw;
-  padding-bottom: 1vh;
+  padding-bottom: 1vw;
 }
 .education article h4 {
   padding-left: 0.5vw;
-  border-bottom: 0.4vh solid #dfdfdf;
+  border-bottom: 0.2vw solid #dfdfdf;
 }
 .education article span {
   color: rgb(91, 73, 139);
@@ -320,7 +320,7 @@ h4 i{
   list-style-type: none;
   margin: 1vw 1vw;
   padding: 0;
-  line-height: 2.5vh;
+  line-height: 1.1vw;
 }
 .education article i {
   color: green;
@@ -329,7 +329,7 @@ h4 i{
   margin-left: 1vw;
 }
 .education li:first-of-type {
-  margin-bottom: 0.8vh;
+  margin-bottom: 0.8vw;
   font-weight: bold;
   margin: 0;
 }
