--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1, h2, h3, h4 {
   
 }
 h4 {
-  font-size: 1.4vw;
+  font-size: 1.5vw;
   margin: 1vw 0 0 0;
   color: rgb(41, 41, 41);
 }
@@ -98,6 +98,9 @@ header {
   margin-left: 1vw;
   margin-bottom: 0.5vw;
 }
+header .nav-bar-toggle-button {
+  visibility: hidden;
+}
 header nav ul {
   display: flex;
   flex-direction: row;
@@ -151,18 +154,22 @@ main {
 /* Home section */
 .home {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0 2.5vw 0;
+  width: 100%;
   height: 38vw;
-  background: url(images/bg.svg) no-repeat 52vw 6vw/58%;
 }
-.home img {
+.home .intro-text{
+  padding: 3vw 0 3vw 2.5vw;
+  width: 70%;
+}
+.home .intro-image{
   position: relative;
-  right: 1vw;
-  border-radius: 40%;
-  width: 16vw;
+  background: url(images/bg.svg) no-repeat;
+  background-size: 195%;
+  background-position: -3.7vw 0.8vw;
+  width: 27%;
+  padding: 3vw 0 5vw 3vw;
 }
 .home h1, h2, h3 {
   width: fit-content;
@@ -188,6 +195,13 @@ main {
   margin-left: 0.6vw;
   line-height: 3vw;
 }
+.home .intro-image img {
+  position: relative;
+  border-radius: 40%;
+  width: 78%;
+  top: 1vw;
+  left: 1vw;
+}
 
 /* About section */
 .about {
@@ -198,20 +212,20 @@ main {
   padding: 2.5vw;
   align-items: center;
 }
-.about div:first-of-type{
+.about .about-image {
   flex: 1 20%;
 }
 .about h4{
   color: white;
 }
-.about img {
+.about .about-image img {
   width: 85%;
   border: 0.8vw solid #fff;
   border-bottom: 2.2vw solid #fff;
   box-sizing: border-box;
   transform: rotate(-9deg);
 }
-.about div:nth-of-type(2) {
+.about .about-text {
   font-family: Roboto, sans-serif;
   flex: 1 80%;
   font-weight: 300;
@@ -223,7 +237,6 @@ main {
   margin-right: 0.5vw;
   font-size: 1.2vw;
 }
-
 .about span {
   font-style: italic;
   float: right;
@@ -245,6 +258,7 @@ main {
   padding-left: 0.5vw;
   border-bottom: 0.2vw solid #dfdfdf;
   cursor : pointer;
+  font-size: 1.3vw;
 }
 .experience article p {
   font-weight: bold;
@@ -321,6 +335,7 @@ h4 i{
 .education article h4 {
   padding-left: 0.5vw;
   border-bottom: 0.2vw solid #dfdfdf;
+  font-size: 1.3vw;
 }
 .education article span {
   color: rgb(91, 73, 139);
