--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://use.fontawesome.com/releases/v5.15.4/css/all.css");
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&family=Saira+Extra+Condensed:wght@300;400&display=swap');
+@import url('https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css');
 
 html {
   background: rgb(200,213,220);
