--- a/style.css
+++ b/style.css
@@ -3,45 +3,56 @@
 @import url('https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css');
 
 html {
-  background: rgb(200,213,220);
+  background: rgb(200, 213, 220);
   scroll-behavior: smooth;
   scroll-padding-top: 10%;
 }
+
 body {
   font-family: Roboto, sans-serif;
   font-size: 1.2vw;
   display: flex;
   flex-direction: column;
   background-color: rgb(255, 255, 255);
-  -webkit-box-shadow: 0px 0px 5px 5px rgba(176, 206, 223, 0.7); 
+  -webkit-box-shadow: 0px 0px 5px 5px rgba(176, 206, 223, 0.7);
   box-shadow: 0px 0px 5px 5px rgba(176, 206, 223, 0.7);
   margin: 1.5% auto;
   width: 80%;
   border-radius: 0.8vw;
   color: #6c757d;
 }
+
 a {
-  color:rgb(209, 152, 30);
+  color: rgb(209, 152, 30);
   text-decoration: none;
 }
-h1, h2, h3, h4 {
+
+h1,
+h2,
+h3,
+h4 {
   font-family: Saira Extra Condensed;
-  
+
 }
+
 h4 {
   font-size: 1.5vw;
   margin: 1vw 0 0 0;
   color: rgb(41, 41, 41);
 }
+
 .fa-linkedin-in:hover {
   color: rgb(7 102 194);
 }
+
 .fa-facebook-f:hover {
   color: rgb(58 89 152);
 }
+
 .fa-instagram:hover {
   color: rgb(185, 63, 223)
 }
+
 header {
   display: flex;
   background-color: #fff;
@@ -53,15 +64,19 @@ header {
   z-index: 1;
   border-radius: 0.8vw 0.8vw 0 0;
 }
-.left, .right {
+
+.left,
+.right {
   display: flex;
   align-items: center;
   margin-top: 2.5%;
   margin-bottom: 0.8%;
 }
+
 .left svg:first-of-type {
   width: 3vw;
 }
+
 .stroke {
   fill-opacity: 0%;
   stroke: #000;
@@ -69,45 +84,54 @@ header {
   stroke-dasharray: 4000;
   animation: stroke 30s ease infinite;
 }
-  @keyframes stroke {
+
+@keyframes stroke {
   0% {
-      stroke-dashoffset: 4000;
-      fill-opacity: 0%;
-      stroke-opacity: 100%;
+    stroke-dashoffset: 4000;
+    fill-opacity: 0%;
+    stroke-opacity: 100%;
   }
+
   25% {
-      fill-opacity: 1%;
+    fill-opacity: 1%;
   }
+
   33% {
-      stroke-dashoffset: 0;
-      fill-opacity: 100%;
-      stroke-opacity: 100%;
+    stroke-dashoffset: 0;
+    fill-opacity: 100%;
+    stroke-opacity: 100%;
   }
-  90%{
-      stroke-dashoffset: 0;
-      fill-opacity: 100%;
-      stroke-opacity: 0%;
+
+  90% {
+    stroke-dashoffset: 0;
+    fill-opacity: 100%;
+    stroke-opacity: 0%;
   }
-  100%{
-      stroke-dashoffset: 0;
-      fill-opacity: 0%;
-      stroke-opacity: 0%;
+
+  100% {
+    stroke-dashoffset: 0;
+    fill-opacity: 0%;
+    stroke-opacity: 0%;
   }
 }
+
 .left svg:nth-of-type(2) {
   width: 10vw;
   margin-left: 1vw;
   margin-bottom: 0.5vw;
 }
+
 header .nav-bar-toggle-button {
   visibility: hidden;
 }
+
 header nav ul {
   display: flex;
   flex-direction: row;
   font-size: 0.95vw;
   list-style-type: none;
 }
+
 header nav a {
   color: #000;
   margin-right: 0.5vw;
@@ -115,7 +139,8 @@ header nav a {
   position: relative;
   text-decoration: none;
 }
-header nav a::before{
+
+header nav a::before {
   background-color: rgb(108, 80, 145);
   content: "";
   display: block;
@@ -127,19 +152,22 @@ header nav a::before{
   transform: scaleX(0);
   transition: transform 0.7s ease;
 }
+
 header nav a:hover::before {
   transform: scaleX(1);
 }
-.social i{
+
+.social i {
   color: #000;
   width: 1vw;
   font-size: 1vw;
   padding: 0.35vw;
-  text-align: center ;
+  text-align: center;
   border-radius: 50%;
   margin-left: 0.2vw;
   transition: 0.7s;
 }
+
 .social i:hover {
   background-color: rgb(201, 206, 209);
 }
@@ -160,11 +188,13 @@ main {
   width: 100%;
   height: 38vw;
 }
-.home .intro-text{
+
+.home .intro-text {
   padding: 3vw 0 3vw 2.5vw;
   width: 70%;
 }
-.home .intro-image{
+
+.home .intro-image {
   position: relative;
   background: url(images/bg.svg) no-repeat;
   background-size: 195%;
@@ -172,23 +202,30 @@ main {
   width: 27%;
   padding: 3vw 0 5vw 3vw;
 }
-.home h1, h2, h3 {
+
+.home h1,
+h2,
+h3 {
   width: fit-content;
   margin: 0;
 }
+
 .home h1 {
   font-size: 17vw;
-  color:#ebebeb;
+  color: #ebebeb;
   line-height: 5.5vw;
 }
-.home h1 + h3 {
+
+.home h1+h3 {
   font-size: 3vw;
   font-weight: bold;
   margin-left: 0.6vw;
 }
-.home h3 span{
+
+.home h3 span {
   color: rgb(108, 80, 145);
 }
+
 .home h2 {
   font-size: 3.8vw;
   color: rgb(61, 64, 87);
@@ -196,6 +233,7 @@ main {
   margin-left: 0.6vw;
   line-height: 3vw;
 }
+
 .home .intro-image img {
   position: relative;
   border-radius: 40%;
@@ -213,12 +251,15 @@ main {
   padding: 2.5vw;
   align-items: center;
 }
+
 .about .about-image {
   flex: 1 20%;
 }
-.about h4{
+
+.about h4 {
   color: white;
 }
+
 .about .about-image img {
   width: 85%;
   border: 0.8vw solid #fff;
@@ -226,11 +267,13 @@ main {
   box-sizing: border-box;
   transform: rotate(-9deg);
 }
+
 .about .about-text {
   font-family: Roboto, sans-serif;
   flex: 1 80%;
   font-weight: 300;
 }
+
 .about i {
   background-color: rgb(108, 80, 145);
   border-radius: 50%;
@@ -238,6 +281,7 @@ main {
   margin-right: 0.5vw;
   font-size: 1.2vw;
 }
+
 .about span {
   font-style: italic;
   float: right;
@@ -248,27 +292,43 @@ main {
   width: 93%;
   margin: auto;
 }
+
+.experience #left {
+  float: left;
+  width: 50%;
+}
+
+.experience #right {
+  float: right;
+  width: 50%;
+}
+
 .experience article {
-  width: 60%;
+  width: 90%;
   display: block;
   margin-left: 4vw;
   font-size: 0.8vw;
 }
+
 .experience article h4 {
   text-transform: uppercase;
   padding-left: 0.5vw;
   border-bottom: 0.2vw solid #dfdfdf;
-  cursor : pointer;
+  cursor: pointer;
   font-size: 1.3vw;
 }
+
 .experience article p {
   font-weight: bold;
   padding-left: 0.5vw;
   margin: 0;
 }
-.experience article p span{
+
+.experience article p span {
   float: right;
 }
+
+
 .dropdown h4::after {
   font-family: "Font Awesome 5 Free";
   font-size: 1vw;
@@ -276,15 +336,18 @@ main {
   float: right;
   margin: 0.6vw;
 }
+
 a[href*="udemy"] {
   color: rgb(91, 73, 139);
 }
+
 .dropdown p span {
   color: rgb(91, 73, 139);
   font-weight: bold;
   padding-left: 0.5vw;
   display: block;
 }
+
 .dropdown .slide {
   clear: both;
   height: 0;
@@ -293,15 +356,18 @@ a[href*="udemy"] {
   list-style-type: none;
   padding: 0 0 0 0.8vw;
 }
+
 .dropdown .touch {
-  position: absolute; 
-  opacity: 0; 
+  position: absolute;
+  opacity: 0;
   height: 0;
 }
-.dropdown .touch:checked + label h4::after{
+
+.dropdown .touch:checked+label h4::after {
   content: "\f0d7";
-}    
-.dropdown .touch:checked + label + .slide {
+}
+
+.dropdown .touch:checked+label+.slide {
   height: 12vh;
 }
 
@@ -318,13 +384,15 @@ a[href*="udemy"] {
   width: 93%;
   margin: auto;
 }
-h4 i{
+
+h4 i {
   background-color: rgb(201, 206, 209);
   border-radius: 50%;
   padding: 0.4vw;
   margin-right: 0.5vw;
   font-size: 1.2vw;
 }
+
 .education article {
   display: flex;
   flex-wrap: nowrap;
@@ -333,32 +401,39 @@ h4 i{
   gap: 5vw;
   padding-bottom: 1vw;
 }
+
 .education article h4 {
   padding-left: 0.5vw;
   border-bottom: 0.2vw solid #dfdfdf;
   font-size: 1.3vw;
 }
+
 .education article span {
   color: rgb(91, 73, 139);
   font-weight: bold;
   padding-left: 0.5vw;
 }
+
 .education ul {
   list-style-type: none;
   margin: 1vw 1vw;
   padding: 0;
 }
+
 .education article i {
   color: green;
 }
+
 .education li:first-of-type {
   margin-bottom: 0.6vw;
   font-weight: bold;
 }
+
 .education article div {
   flex-basis: 30%;
 }
-.education article p{
+
+.education article p {
   text-align: right;
   font-weight: bold;
 }
@@ -372,19 +447,23 @@ h4 i{
   width: 93%;
   margin: auto;
 }
+
 .news div {
   display: flex;
   align-items: flex-start;
   justify-content: space-around;
 }
+
 .news article {
   font-size: 0.9vw;
   flex-basis: 30%;
 }
-.news i{
+
+.news i {
   font-size: 1.3vw;
   color: rgb(0, 0, 0);
 }
+
 .news .title {
   width: 12vw;
   height: 12vw;
@@ -394,13 +473,15 @@ h4 i{
   box-sizing: border-box;
   margin: 0 auto;
 }
+
 .news img {
   width: 100%;
   height: 100%;
-  object-fit:scale-down;
+  object-fit: scale-down;
   border-radius: 50%;
 }
-.news .title:hover{
+
+.news .title:hover {
   border: 0.5vw #999999 solid;
 }
 
@@ -410,10 +491,14 @@ h4 i{
   margin: auto auto 1vw;
   font-size: 1vw;
 }
-.contact h4{
+
+.contact h4 {
   margin-bottom: 1vw;
 }
-.contact input[type=text],input[type=email], textarea {
+
+.contact input[type=text],
+input[type=email],
+textarea {
   font-size: 0.8vw;
   width: 100%;
   padding: 0.8vw;
@@ -421,16 +506,21 @@ h4 i{
   border-radius: 0.4vw;
   box-sizing: border-box;
   margin: 0.5vw auto 1vw;
-  resize:none;
+  resize: none;
 
 }
-.contact label{
-  color:black;
+
+.contact label {
+  color: black;
 }
-.contact input[type=text]:focus, input[type=email]:focus, textarea:focus{
+
+.contact input[type=text]:focus,
+input[type=email]:focus,
+textarea:focus {
   border: 0.12vw solid rgb(108, 80, 145);
   outline: none;
 }
+
 input[type=submit] {
   font-size: 0.8vw;
   background-color: rgb(108, 80, 145);
@@ -454,12 +544,14 @@ footer {
   color: #fff;
   padding: 0 2vw;
 }
-footer i{
+
+footer i {
   padding: 0.35vw;
   border-radius: 50%;
   transition: 1s;
   color: #fff;
 }
-footer i:hover{
+
+footer i:hover {
   background-color: rgb(82, 88, 139)
 }
