--- a/style.css
+++ b/style.css
@@ -322,10 +322,13 @@ h3 {
   font-weight: bold;
   padding-left: 0.5vw;
   margin: 0;
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
 }
 
 .experience article p span {
   float: right;
+  margin-right: 0.5vw;
 }
 
 
@@ -334,7 +337,7 @@ h3 {
   font-size: 1vw;
   content: "\f0d7";
   float: right;
-  margin: 0.6vw;
+  margin: 0.5vw;
 }
 
 a[href*="udemy"] {
@@ -356,6 +359,8 @@ a[href*="udemy"] {
   list-style-type: none;
   padding: 1.7vh 0 0 0.8vw;
   margin: 0;
+  border: 1px solid #fff;
+  border-top: 0;
 }
 
 .dropdown .touch {
@@ -383,7 +388,7 @@ a[href*="udemy"] {
   border-style: solid;
   border-image: linear-gradient(to bottom, #dfdfdf 50%, rgba(0, 0, 0, 0)) 1 100%;
   border-top: 0;
-  padding-top: 1.7vh;
+  padding: 1.7vh 0 0 0.8vw;
 }
 
 
