--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ a {
   text-decoration: none;
 }
 
+a[href*="udemy"] {
+  color: rgb(91, 73, 139);
+}
+
 h1,
 h2,
 h3,
@@ -310,6 +314,10 @@ h3 {
   font-size: 0.8vw;
 }
 
+.experience article label {
+  cursor: pointer;	
+}
+
 .experience article h4 {
   background-image: linear-gradient(90deg, rgba(235,235,235,1) 35%, rgba(255,255,255,1) 100%);
   background-size: 0 100%;
@@ -318,7 +326,6 @@ h3 {
   text-transform: uppercase;
   padding-left: 0.5vw;
   border-bottom: 0.2vw solid #dfdfdf;
-  cursor: pointer;
   font-size: 1.3vw;
 }
 
@@ -344,9 +351,6 @@ h3 {
   margin: 0.5vw;
 }
 
-a[href*="udemy"] {
-  color: rgb(91, 73, 139);
-}
 
 .dropdown p span {
   color: rgb(91, 73, 139);
