--- a/style.css
+++ b/style.css
@@ -23,8 +23,11 @@ body {
 }
 
 a {
-  color: rgb(209, 152, 30);
   text-decoration: none;
+}
+
+a[href*="softuni"]{
+  color: rgb(209, 152, 30);
 }
 
 a[href*="udemy"] {
@@ -43,6 +46,7 @@ h4 {
   font-size: 1.5vw;
   margin: 1vw 0 0 0;
   color: rgb(41, 41, 41);
+  text-transform: uppercase;
 }
 
 .fa-linkedin-in:hover {
@@ -438,11 +442,11 @@ h4 i {
 
 .education ul {
   list-style-type: none;
-  margin: 1vw 1vw;
+  margin: 1vw 1vw 0.5vw 1vw;
   padding: 0;
 }
 
-.education article i {
+.education article li i {
   color: green;
 }
 
