--- a/style.css
+++ b/style.css
@@ -7,10 +7,14 @@ html {
   background: rgb(200, 213, 220);
   scroll-behavior: smooth;
   scroll-padding-top: 10%;
-  -webkit-user-select: none; /* Safari */        
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+/Edge */
-  user-select: none; /* Standard */
+  -webkit-user-select: none;
+  /* Safari */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* IE10+/Edge */
+  user-select: none;
+  /* Standard */
 }
 
 body {
@@ -31,7 +35,7 @@ a {
   text-decoration: none;
 }
 
-a[href*="softuni"]{
+a[href*="softuni"] {
   color: rgb(209, 152, 30);
 }
 
@@ -324,11 +328,11 @@ h3 {
 }
 
 .experience article label {
-  cursor: pointer;	
+  cursor: pointer;
 }
 
 .experience article h4 {
-  background-image: linear-gradient(90deg, rgba(235,235,235,1) 35%, rgba(255,255,255,1) 100%);
+  background-image: linear-gradient(90deg, rgba(235, 235, 235, 1) 35%, rgba(255, 255, 255, 1) 100%);
   background-size: 0 100%;
   transition: .4s;
   background-repeat: no-repeat;
@@ -392,12 +396,12 @@ h3 {
   transform: rotate(-45deg);
 }
 
-.dropdown .touch:checked+label h4{
+.dropdown .touch:checked+label h4 {
   background-size: 100% 100%;
 }
 
 
-.dropdown .touch:checked+label p{
+.dropdown .touch:checked+label p {
   border-left: 1px solid #dfdfdf;
   border-right: 1px solid #dfdfdf;
 }
@@ -479,6 +483,7 @@ h4 i {
   align-items: flex-start;
   width: 93%;
   margin: auto;
+  overflow-y: hidden;
 }
 
 .news div {
@@ -490,6 +495,11 @@ h4 i {
 .news article {
   font-size: 0.9vw;
   flex-basis: 30%;
+  padding: 1.5vw;
+}
+
+.news h4 {
+  text-align: center;
 }
 
 .news i {
